--- a/Reactive-Forms/tsconfig.json
+++ b/Reactive-Forms/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
@@ -22,7 +22,7 @@
       "ES2022",
       "dom"
     ],
-    "strictPropertyInitialization":false
+    "strictPropertyInitialization":false,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
